# Solana-NFT

./: .gitignore  Readme.md  metadata.json  package-lock.json  package.json
program/: Cargo.toml
program/src/instructions/: create.rs  mint.rs
tests/: test.ts  test_old.txt
