[package]
name = "nft-minter-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.18.11"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="2.0.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = "4.1.2"

[lib]
crate-type = ["cdylib", "lib"]
